--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration production --source-map",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "source-map-explorer": "source-map-explorer dist/path-finder/**/*.js"
   },
   "private": true,
   "dependencies": {
@@ -18,7 +19,6 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
-    "min-heap": "^0.2.3",
     "p5": "^1.6.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -30,6 +30,7 @@
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
     "@types/p5": "^1.6.2",
+    "angular-cli-ghpages": "^1.0.6",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
