--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
             "allowedCommonJsDependencies": ["p5"],
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
-              "node_modules/@clr/ui/clr-ui.min.css",
+              "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -91,7 +91,10 @@
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss"],
+            "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "src/styles.scss"
+            ],
             "scripts": []
           }
         },
