--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
-    "@cds/core": "^6.4.4",
-    "@clr/angular": "^13.18.2",
-    "@clr/ui": "^13.18.2",
+    "bootstrap": "^5.3.0",
     "p5": "^1.6.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
